Show number is page properties panel, and fix alignment of label

--- a/app/assets/stylesheets/composer/_newstime_properties_panel.css.scss
+++ b/app/assets/stylesheets/composer/_newstime_properties_panel.css.scss
@@ -39,7 +39,7 @@
     width: 50px;
     margin-right: 20px;
     text-align: right;
-    vertical-align: top;
+    vertical-align: initial;
 
   }
 
